examples/some-deployment.yml
#
# This file tests an Kubernetes deployment as a suffix file
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-deployment
spec:
  selector:
    matchLabels:
      app: sample-deployment
  template:
    metadata:
      labels:
        app: sample-deployment
    spec:
      containers:
        - name: sample-deployment
          image: nginx:1-alpine
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: html
          resources:
            requests: { memory: 32Mi, cpu: 10m }
            limits: { memory: 64Mi, cpu: 100m }

      volumes:
        - name: html
          persistentVolumeClaim:
            claimName: sample-pvc
