examples/service.yml
#
# This file tests an Kubernetes service
#

apiVersion: v1
kind: Service
metadata:
  name: sample-service
spec:
  selector:
    app.kubernetes.io/name: some-deployment
    app.kubernetes.io/instance: development
    app.kubernetes.io/version: v1.0.0
  ports:
    - port: 80
      name: http
      targetPort: 80
  type: NodePort
